Fixed date input on form - Week 2 Assignment

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             <h2>a better way to camp</h2>
           </div>
           <div class="col-md-4 col-xl-2 mt-4">
-              <a href="#reserveForm" class="btn btn-info btn-lg text-nowrap">Reserve Campsite</a>
+            <a href="#reserveForm" class="btn btn-info btn-lg text-nowrap"
+              >Reserve Campsite</a
+            >
           </div>
         </div>
       </div>
@@ -179,12 +181,12 @@
                 </div>
                 <div class="form-group row">
                   <label class="col-sm-6 col-form-label" for="date">Date</label>
-                  <div class="col-sm">
+                  <div class="col">
                     <input
                       class="form-control"
+                      type="date"
                       name="date"
                       id="date"
-                      placeholder="mm/dd/yyyy"
                     />
                   </div>
                 </div>
