--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           </div>
           <div class="col-md-4 col-xl-2 mt-4">
             <a href="#reserveForm" class="btn btn-info btn-lg text-nowrap"
-              >Reserve Campsite</a
-            >
+              >Reserve Campsite
+            </a>
           </div>
         </div>
       </div>
@@ -160,10 +160,10 @@
             <div class="card-body">
               <form id="reserveForm">
                 <div class="form-group row">
-                  <label class="col-sm-6 col-form-label"
+                  <label class="col-sm-6 col-form-label" for="numCampers"
                     >Number of Campers</label
                   >
-                  <div class="col-sm">
+                  <div class="col">
                     <select
                       class="form-control"
                       name="numCampers"
