--- a/indexCopy.html
+++ b/indexCopy.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css copy/stylesCopy.css" />
 
     <title>NuCamp: A Better Way To Camp</title>
   </head>
@@ -38,76 +38,13 @@
             <h2>a better way to camp</h2>
           </div>
           <div class="col-md-4 col-xl-2 mt-4">
-            <a class="btn btn-info btn-lg text-nowrap" data-type="button" data-toggle="modal" data-target="#reserveModal"
+            <a href="#reserveForm" class="btn btn-info btn-lg text-nowrap" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at<br /><strong >1-206-555-1234</strong>"
               >Reserve Campsite
             </a>
           </div>
         </div>
       </div>
     </header>
-
-    <div id="reserveModal" class=" modal fade" role="dialog">
-      <div class=" modal-dialog modal-lg" role="document">
-        <div class=" modal-content">
-          <div class=" modal-header bg-info text-white">
-            <h3 class=" modal-title">Reserve a Campsite</h3>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-          </div>
-          <div class=" modal-body">
-            <div class=" container-fluid">
-              <form>
-                <div class="form-group row">
-                  <label class="col-sm-6 col-form-label" for="numCampers"
-                    >Number of Campers</label
-                  >
-                  <div class="col">
-                    <select
-                      class="form-control"
-                      name="numCampers"
-                      id="numCampers"
-                    >
-                      <option>Select...</option>
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                      <option>6</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-sm-6 col-form-label" for="date">Date</label>
-                  <div class="col">
-                    <input
-                      class="form-control"
-                      type="date"
-                      name="date"
-                      id="date"
-                    />
-                  </div>
-                </div>
-                <div class=" form-group row">
-                  <label class="col-sm-6 col-form-label">Campsite</label>
-                  <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
-                    <label class="btn btn-primary active">
-                      <input type="radio" name="siteType" id="siteTent" autocomplete="off" checked> Tent
-                    </label>
-                    <label class="btn btn-success">
-                      <input type="radio" name="siteType" id="siteRV" autocomplete="off"> RV
-                    </label>
-                  </div>
-                </div>
-                <div class="form-row">
-                    <button type="button" class="btn btn-secondary mr-1" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary mr-auto">Search</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
       <div class="container">
@@ -232,12 +169,10 @@
             <span class="sr-only">Next</span>
         </a>
         </div>
-      </div>
     </div>
-
-      <div class="row row-content align-items-center">
+      <div class="row row-content align-items-center blue-body red-text">
         <div class="col-sm-4 order-sm-last col-md-3">
-          <h2 class="text-sm-right">Discover & Review</h2>
+          <h2 class="text-sm-right red-text">Discover & Review</h2>
         </div>
         <div class="col">
           <div class="media">
@@ -257,8 +192,8 @@
         </div>
       </div>
 
-      <div class="row row-content align-items-center">
-        <div class="col-sm-4 col-md-3">
+      <div class="row row-content align-items-center red-body blue-text">
+        <div class="col-sm-4 col-md-3 blue-text">
           <h2>Featured Campsites</h2>
         </div>
         <div class="col">
@@ -280,9 +215,9 @@
         </div>
       </div>
 
-      <div class="row row-content align-items-center">
+      <div class="row row-content align-items-center blue-body red-text">
         <div class="col-sm-4 order-sm-last col-md-3">
-          <h2 class="text-sm-right">Our Community Partners</h2>
+          <h2 class="text-sm-right red-text">Our Community Partners</h2>
         </div>
         <div class="col">
           <div class="media">
@@ -297,6 +232,55 @@
                 Bootstrap Outfitters supplies you with gear you need at prices
                 you can't beat.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row row-content">
+        <div class="col-sm-6 mx-auto">
+          <div class="card">
+            <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+            <div class="card-body">
+              <form id="reserveForm">
+                <div class="form-group row">
+                  <label class="col-sm-6 col-form-label" for="numCampers"
+                    >Number of Campers</label
+                  >
+                  <div class="col">
+                    <select
+                      class="form-control"
+                      name="numCampers"
+                      id="numCampers"
+                    >
+                      <option>Select...</option>
+                      <option>1</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>5</option>
+                      <option>6</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-6 col-form-label" for="date">Date</label>
+                  <div class="col">
+                    <input
+                      class="form-control"
+                      type="date"
+                      name="date"
+                      id="date"
+                    />
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="col">
+                    <button type="submit" class="btn btn-primary">
+                      Search
+                    </button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
@@ -353,5 +337,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
   </body>
 </html>
