--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
                     </label>
                   </div>
                 </div>
-                <div class="form-row">
-                    <button type="button" class="btn btn-secondary mr-1" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary mr-auto">Search</button>
+                <div class="form-group row">
+                  <div class=" col">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Search</button>
+                  </div>
                 </div>
               </form>
             </div>
